Adapt djutils-swing test code to work in a headless environment